--- a/public/index.html
+++ b/public/index.html
@@ -3,8 +3,12 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link
+      href="https://fonts.googleapis.com/css?family=Righteous"
+      rel="stylesheet"
+    />
     <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico" />
-    <title>React App</title>
+    <title>Ariana Grnade</title>
   </head>
   <body>
     <div id="root"></div>
