--- a/public/index.html
+++ b/public/index.html
@@ -2,13 +2,14 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
+
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link
       href="https://fonts.googleapis.com/css?family=Righteous"
       rel="stylesheet"
     />
-    <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico" />
-    <title>Ariana Grnade</title>
+    <link rel="shortcut icon" href="./fav.png" />
+    <title>The Venue</title>
   </head>
   <body>
     <div id="root"></div>
