--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,17 @@
       href="https://fonts.googleapis.com/css?family=Righteous"
       rel="stylesheet"
     />
+    <link
+      rel="stylesheet"
+      type="text/css"
+      charset="UTF-8"
+      href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.6.0/slick.min.css"
+    />
+    <link
+      rel="stylesheet"
+      type="text/css"
+      href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.6.0/slick-theme.min.css"
+    />
     <link rel="shortcut icon" href="./fav.png" />
     <title>The Venue</title>
   </head>
